--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -18,6 +18,8 @@ docker_images:
 
 pipelines:
  - habitat/build
+ - habitat/test:
+     definition: .expeditor/habitat_test.yml
  - omnibus/release
  - omnibus/adhoc:
     definition: .expeditor/release.omnibus.yml
