Allow rubocop to ignore our test-kitchen files
Signed-off-by: Miah Johnson <miah@chia-pet.org>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,6 @@
 AllCops:
   Exclude:
+    - 'test/kitchen/**/*'
     - 'test/integration/**/controls/**/*.rb'
     - 'test/unit/mock/profiles/**/*.rb'
     - 'test/unit/mock/config_dirs/**/*.rb'
