Stop using reserved pipelines with default triggers.
The pipeline prefixes: deploy, habitat, omnibus, and verify all have default
triggers associtated with them.

https://expeditor.chef.io/docs/reference/configuration/#pipelines

Signed-off-by: Miah Johnson <miah@chia-pet.org>

--- a/.expeditor/artifact.habitat.yml
+++ b/.expeditor/artifact.habitat.yml
@@ -3,7 +3,7 @@ steps:
 
 - label: ":linux: Validate Habitat Builds of Chef InSpec"
   commands:
-    - /workdir/.expeditor/buildkite/habitat_test.sh
+    - /workdir/.expeditor/buildkite/artifact.habitat.test.sh
   expeditor:
     executor:
       linux:
@@ -12,7 +12,7 @@ steps:
 
 - label: ":windows: Validate Habitat Builds of Chef InSpec"
   commands:
-    - /workdir/.expeditor/buildkite/habitat_test.ps1
+    - /workdir/.expeditor/buildkite/artifact.habitat.test.ps1
   expeditor:
     executor:
       windows:
