Switched chefstyle back to Layout/AlignArguments=with_first_argument.
Fixed the flags mostly with `chefstyle -a` but also refactored/cleaned
some stuff by hand.

Signed-off-by: Ryan Davis <zenspider@chef.io>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,3 +7,5 @@ AllCops:
     - 'lib/plugins/inspec-init/templates/plugins/inspec-plugin-template/**/*'
     - 'examples/**/controls/*.rb'
     - 'vendor/bundle/**/*'
+Layout/AlignArguments:
+  EnforcedStyle: with_first_argument
