Corresponding fixes for the move from test/unit/mock to test/fixtures.
Signed-off-by: Ryan Davis <zenspider@chef.io>

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -27,5 +27,5 @@ plugins:
 exclude_patterns:
   - "www/source/javascripts/"
   - "examples/"
-  - "test/unit/mock/profiles/"
+  - "test/fixtures/profiles/"
   - "test/kitchen"
