Update expeditor to skip with new labels
Signed-off-by: Ryan Davis <zenspider@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -89,8 +89,8 @@ changelog:
 merge_actions:
  - built_in:bump_version:
     ignore_labels:
-     - "Version: Skip Bump"
      - "Expeditor: Skip All"
+     - "Expeditor: Skip Version Bump"
     only_if_modified:
      - docs/*
      - etc/*
@@ -109,8 +109,8 @@ merge_actions:
     only_if: built_in:bump_version
  - built_in:update_changelog:
     ignore_labels:
-     - "Changelog: Skip Update"
      - "Expeditor: Skip All"
+     - "Expeditor: Skip Changelog"
  - trigger_pipeline:omnibus/adhoc:
     not_if: built_in:bump_version
     ignore_labels:
