Make 2.7 failures real
Signed-off-by: Ryan Davis <zenspider@chef.io>

--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -35,7 +35,7 @@ steps:
 
 - label:  run-tests-ruby-2.7-preview
   command:
-    - /workdir/.expeditor/buildkite/verify.sh || true
+    - /workdir/.expeditor/buildkite/verify.sh
   expeditor:
     executor:
       docker:
