this uses chefes/buildkite
Signed-off-by: Miah Johnson <miah@chia-pet.org>

--- a/.expeditor/coverage.pipeline.yml
+++ b/.expeditor/coverage.pipeline.yml
@@ -11,6 +11,8 @@ steps:
     commands:
       - .expeditor/buildkite/coverage.sh
     expeditor:
+      executor:
+        docker:
       secrets:
         COVERAGE_ID:
           path: secret/coveralls/inspec/inspec
