trigger coverage on pull requests
Signed-off-by: Miah Johnson <miah@chia-pet.org>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -162,6 +162,7 @@ subscriptions:
     - built_in:notify_chefio_slack_channels
  - workload: pull_request_opened:{{agent_id}}:*
    actions:
+     - trigger_pipeline:coverage
      - post_github_comment:.expeditor/templates/pull_request.mustache:
          ignore_team_members:
            - inspec/owners
