--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -9,6 +9,14 @@ expeditor:
 
 steps:
 
+- label: lint-ruby-2.6
+  command:
+    - RAKE_TASK=test:lint /workdir/.expeditor/buildkite/verify.sh
+  expeditor:
+    executor:
+      docker:
+        image: ruby:2.6-stretch
+
 - label: run-tests-ruby-2.4
   command:
     - /workdir/.expeditor/buildkite/verify.sh
