--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -22,7 +22,11 @@ plugins:
     enabled: true
     config:
       score_threshold: 30
+  reek:
+    enabled: true
   markdownlint:
+    enabled: true
+  shellcheck:
     enabled: true
 exclude_patterns:
   - "www/source/javascripts/"
