While we're in here... let's trigger artifact/habitat on PRs
Signed-off-by: Ryan Davis <zenspider@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -171,3 +171,4 @@ subscriptions:
         - inspec/owners
         - inspec/inspec-core-team
     - trigger_pipeline:coverage
+    - trigger_pipeline:artifact/habitat
