Might as well do it for hab artifact as well.
Signed-off-by: Ryan Davis <zenspider@chef.io>

--- a/.expeditor/artifact.habitat.yml
+++ b/.expeditor/artifact.habitat.yml
@@ -3,6 +3,9 @@ expeditor:
   defaults:
     buildkite:
       timeout_in_minutes: 30
+      retry:
+        automatic:
+          limit: 1
 
 steps:
 
