Changing the rakefile setup so all gems get built.
Signed-off-by: Ryan Davis <zenspider@chef.io>

--- a/inspec-bin/Rakefile
+++ b/inspec-bin/Rakefile
@@ -1,4 +1,4 @@
-Bundler::GemHelper.install_tasks(name: "inspec-bin")
+Bundler::GemHelper.install_tasks name: "inspec-bin"
 
 desc "force install the inspec-bin gem"
 task "install:force" do
