Change habitat/build pipeline to trigger pull_request.
This is yet another pipeline that was made red by the last couple
days' chaos... This should improve visibility and debuggability (sp?).

Signed-off-by: Ryan Davis <zenspider@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -22,6 +22,7 @@ pipelines:
      - HAB_NONINTERACTIVE: "true"
      - HAB_NOCOLORING: "true"
      - HAB_STUDIO_SECRET_HAB_NONINTERACTIVE: "true"
+    trigger: pull_request
  - omnibus/release
  - omnibus/adhoc:
     definition: .expeditor/release.omnibus.yml
