--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -43,7 +43,7 @@ steps:
 
   - label: run-tests-ruby-2.7
     command:
-      - /workdir/.expeditor/buildkite/verify.sh || true
+      - /workdir/.expeditor/buildkite/verify.sh
     expeditor:
       executor:
         docker:
