Add el-7 and el-8 aarch64 testers
Signed-off-by: Christopher A. Snapp <csnapp@chef.io>

--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -13,6 +13,9 @@ builder-to-testers-map:
     - debian-10-x86_64
   el-6-x86_64:
     - el-6-x86_64
+  el-7-aarch64:
+    - el-7-aarch64
+    - el-8-aarch64
   el-7-x86_64:
     - el-7-x86_64
     - el-8-x86_64
