Failing test cases for #4977
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/test/fixtures/profiles/inputs/cli/inspec.yml
+++ b/test/fixtures/profiles/inputs/cli/inspec.yml
@@ -4,3 +4,7 @@ summary: Profile to exercise setting inputs using the --input CLI option
 version: 0.1.0
 supports:
   platform: os
+
+inputs:
+  - name: test_input_04
+    type: numeric
