--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -11,6 +11,8 @@ builder-to-testers-map:
     - debian-8-x86_64
     - debian-9-x86_64
     - debian-10-x86_64
+  debian-10-aarch64:
+    - debian-10-aarch64
   el-6-x86_64:
     - el-6-x86_64
   el-7-aarch64:
