--- a/test/fixtures/profiles/waivers/basic/files/waivers.yaml
+++ b/test/fixtures/profiles/waivers/basic/files/waivers.yaml
@@ -53,4 +53,19 @@
 14_waivered_expiry_in_future_z_not_ran:
   expiration_date: 2077-11-10T00:00:00Z
   justification: Lack of imagination
+  run: false
+
+15_waivered_expiry_in_future_string_ran_passes:
+  expiration_date: "2077-06-01"
+  justification: Handwaving
+  run: true
+
+16_waivered_expiry_in_future_string_ran_fails:
+  expiration_date: "2077-06-01"
+  justification: Didn't feel like it
+  run: true
+
+17_waivered_expiry_in_future_string_not_ran:
+  expiration_date: "2077-06-01"
+  justification: Lack of imagination
   run: false  
