--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -16,31 +16,23 @@ steps:
         docker:
           image: ruby:2.6
 
-  - label: run-tests-ruby-2.6
+  - label: run-unit-tests-ruby-2.6
     command:
-      - /workdir/.expeditor/buildkite/verify.sh
+      - RAKE_TASK=test:unit /workdir/.expeditor/buildkite/verify.sh
     expeditor:
       executor:
         docker:
           image: ruby:2.6
 
-  - label: run-tests-ruby-2.7
+  - label: run-unit-tests-ruby-2.7
     command:
-      - /workdir/.expeditor/buildkite/verify.sh
+      - RAKE_TASK=test:unit /workdir/.expeditor/buildkite/verify.sh
     expeditor:
       executor:
         docker:
           image: ruby:2.7
 
-  - label: isolated-tests-ruby-2.6
-    command:
-      - RAKE_TASK=test:isolated /workdir/.expeditor/buildkite/verify.sh
-    expeditor:
-      executor:
-        docker:
-          image: ruby:2.6
-
-  - label: run-tests-ruby-2.6-windows
+  - label: run-unit-tests-ruby-2.6-windows
     command:
       - /workdir/.expeditor/buildkite/verify.ps1
     expeditor:
