--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -7,21 +7,34 @@ fips-platforms:
   - el-*-x86_64
   - windows-*
 builder-to-testers-map:
+  debian-8-x86_64:
+    - debian-8-x86_64
+    - debian-9-x86_64
+    - debian-10-x86_64
   el-6-x86_64:
     - el-6-x86_64
+  el-7-aarch64:
+    - el-7-aarch64
+    - el-8-aarch64
+    - amazon-2-aarch64
   el-7-x86_64:
     - el-7-x86_64
-  mac_os_x-10.12-x86_64:
-    - mac_os_x-10.12-x86_64
+    - el-8-x86_64
+    - amazon-2-x86_64
+  mac_os_x-10.13-x86_64:
     - mac_os_x-10.13-x86_64
     - mac_os_x-10.14-x86_64
+    - mac_os_x-10.15-x86_64
   sles-12-x86_64:
     - sles-12-x86_64
     - sles-15-x86_64
   ubuntu-16.04-x86_64:
     - ubuntu-16.04-x86_64
     - ubuntu-18.04-x86_64
+    - ubuntu-20.04-x86_64
   windows-2012r2-x86_64:
     - windows-2012-x86_64
     - windows-2012r2-x86_64
     - windows-2016-x86_64
+    - windows-2019-x86_64
+    - windows-10-x86_64
