--- a/www/.gitignore
+++ b/www/.gitignore
@@ -4,18 +4,32 @@
 # or operating system, you probably want to add a global ignore instead:
 # git config --global core.excludesfile ~/.gitignore_global
 
-# Ignore bundler config
-/.bundle
-
-# Ignore the build directory
-/build
-
-# Ignore cache
-/.sass-cache
-/.cache
-
-# Ignore .DS_store file
 .DS_Store
 
-# Ignore rendered files from docs/
-source/docs/reference/
+# ignore doctree files in translation folders
+*.doctree
+*.pickle
+
+public/
+/resources/
+
+**/.sass-cache
+**/.sass-cache/*
+*.css.map
+*.css_t.map
+
+/.delivery/cli.toml
+
+/.vscode
+
+/.venv
+
+*.*~
+*~
+TAGS
+
+results/
+
+static/fonts/fontawesome
+node_modules
+vendor
