Temporary comment out to get expeditor build to complete
Signed-off-by: Nicholas Schwaderer <nschwaderer@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -157,11 +157,11 @@ subscriptions:
     - built_in:promote_habitat_packages
  - workload: artifact_published:stable:inspec:{{version_constraint}}
    actions:
-    - bash:.expeditor/update_dockerfile.sh
-    - built_in:rollover_changelog
-    - built_in:publish_rubygems
-    - built_in:create_github_release
-    - built_in:tag_docker_image
+    # - bash:.expeditor/update_dockerfile.sh
+    # - built_in:rollover_changelog
+    # - built_in:publish_rubygems
+    # - built_in:create_github_release
+    # - built_in:tag_docker_image
     - built_in:promote_habitat_packages
     - bash:.expeditor/publish-release-notes.sh:
        post_commit: true
