We require version bumps for expeditor to be read against master
Signed-off-by: Nick Schwaderer <nschwaderer@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -102,6 +102,7 @@ merge_actions:
      - "Expeditor: Skip All"
      - "Expeditor: Skip Version Bump"
     only_if_modified:
+     - .expeditor/*
      - docs/*
      - etc/*
      - habitat/*
