Enforced bump. Fully allow this to build before merge.
Signed-off-by: Nick Schwaderer <nschwaderer@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -162,7 +162,7 @@ subscriptions:
     # - built_in:rollover_changelog
     # - built_in:publish_rubygems
     # - built_in:create_github_release
-    # # - built_in:tag_docker_image No longer exists
+    # # - built_in:tag_docker_image No longer exists #
     # - built_in:promote_habitat_packages
     # - bash:.expeditor/publish-release-notes.sh:
     #    post_commit: true
