Add commentary to kitchen.yml
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -8,6 +8,9 @@ transport:
   name: dokken
 
 lifecycle:
+  # The purpose of this code is to build the InSpec gems from source and then make them available
+  # to the install_inspec cookbook, which will install the gems. This means that the inspec used
+  # during the Kitchen Verify phase will be the version from source.
   pre_converge:
     - local: cd inspec-bin && gem build inspec-core-bin.gemspec --output ../test/kitchen/cookbooks/install_inspec/files/inspec-core-bin.gem
     - local: gem build inspec-core.gemspec --output test/kitchen/cookbooks/install_inspec/files/inspec-core.gem
@@ -19,6 +22,9 @@ verifier:
   name: inspec
   sudo: true
 
+# Test against every supported target platform for which we have a dokken image.
+# If we don't have a dokken image, see kitchen.chef.yml for Vagrant-based testing.
+# Try to keep this list up to date!
 platforms:
 - name: amazonlinux
   driver:
