Create expeditor-development release branch
This will allow us to work with PRs against a non-Master branch to iterate expeditor work

Signed-off-by: Nick Schwaderer <nschwaderer@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -88,6 +88,8 @@ github:
      version_constraint: 2.*
   - 3-stable:
      version_constraint: 3.*
+  - expeditor-development:
+     version_constraint: 4.*
 
 changelog:
  categories:
