--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -88,8 +88,9 @@ github:
      version_constraint: 2.*
   - 3-stable:
      version_constraint: 3.*
-  - expeditor-development:
-     version_constraint: 4.*
+  # We need to ensure all configs are in place to appropriately support this branch
+  # - expeditor-development:
+  #    version_constraint: 4.*
 
 changelog:
  categories:
